Move "next" arrow back to the right side

--- a/css/jquery.cslider.css
+++ b/css/jquery.cslider.css
@@ -86,6 +86,7 @@
 }
 
 .da-arrows span.da-arrows-next {
+    right: 15px;
     background: no-repeat center url("data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' width='45' height='130'><path fill='none' stroke='white' stroke-width='2' d='M2 0l40 65-40 65'/></svg>");
 }
 
