Fix style a bit
+ Align project details border below the heading with new darker green background colour, else the line can be seen left and right leaving the frame. On software and contribute page, this would currently not be required, due to different HTML, but it still looks good. The line appears a little thinner, when it is darker.
+ Move the project tile hover mask to the left side of the tile. By default it starts after the left padding, while it should cover it, like the right one. This didn't show up before the colour change, as the background was nearly black, so wasn't visible as no covered.
+ Apply project tile hover mask opacity with hex colour code alpha. D9 matches 85%.
+ Set "more" plus icon z-index only as large as possible. Mid-term we can move this element below the mask element in HTML, so it appears in front of it without having to set a z-index.
+ Make the project tile title highlighted green, when hovering it. The green colour was used before the colour change, but it doesn't look that good in the blue-ish background. But when hovering the element, and the mask appears, it looks quite nice. This was suggested already, but forgotten finally.
+ Do not set white colour for project tile heading, as this is the case anyway, as everything is inside of an anchor element.

--- a/css/style.css
+++ b/css/style.css
@@ -212,9 +212,13 @@ a:hover {
 	z-index: 4;
 }
 .thumbnail h3 {
-	color: #ffffff;
 	font-size: 14px;
 	margin-top: 5px;
+}
+.thumbnail:hover h3,
+.thumbnail:focus h3,
+.thumbnail:active h3 {
+	color: #c5ff00;
 }
 .thumbnail p {
 	font-size: 10px;
@@ -222,7 +226,7 @@ a:hover {
 .thumbnail .more {
 	position: absolute;
 	top: -40px;
-	z-index: 4;
+	z-index: 1;
 	width: 40px;
 	height: 40px;
 	margin-left: -20px;
@@ -236,10 +240,10 @@ a:hover {
 .thumbnail .mask {
 	width: 100%;
 	height: 100%;
-	background-color: #181a1c;
-	opacity: 0.85;
+	background-color: #181a1cd9;
 	position: absolute;
 	top: 100%;
+	left: 0;
 	transition: top 0.2s ease-out;
 }
 .thumbnail:hover .mask {
@@ -325,7 +329,7 @@ a:hover {
 	background-color: #181a1c;
 }
 .project-title {
-	border-bottom: 1px solid #c5ff00;
+	border-bottom: 1px solid #9ccc00;
 }
 .project-title h3 {
 	float: left;
